--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -289,6 +289,7 @@ aside {
 .navbar-default .nav > li.active > a:focus:hover {
   background-color: transparent;
 }
+
 @media (min-width: 768px) {
   .navbar-default {
     background-color: rgb(38, 38, 38);
@@ -332,6 +333,7 @@ aside {
 
 header {
   position: relative;
+  background-attachment: fixed;
   width: 100%;
   height: 100%;
   min-height: auto;
