--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -27,7 +27,6 @@ hr.division{
 
 #skills {
   position: relative;
-  background-attachment: fixed;
   width: 100%;
   min-height: auto;
   -webkit-background-size: cover;
@@ -124,7 +123,6 @@ hr.division{
 
 #contact {
   position: relative;
-  background-attachment: fixed;
   width: 100%;
   min-height: auto;
   -webkit-background-size: cover;
@@ -203,6 +201,16 @@ hr.division{
 
 .copyright{
   padding: 10px;
+}
+
+.parallax {
+  background-attachment: fixed;
+}
+
+@media only screen and (max-device-width: 1024px) {
+    .parallax {
+        background-attachment: scroll;
+    }
 }
 
 input, textarea {
@@ -335,7 +343,6 @@ aside {
 
 header {
   position: relative;
-  background-attachment: fixed;
   width: 100%;
   height: 100%;
   min-height: auto;
