--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -205,6 +205,7 @@ hr.division{
 
 .parallax {
   background-attachment: fixed;
+  -webkit-transform: translateZ(0);
 }
 
 @media only screen and (max-device-width: 1024px) {
