--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -223,6 +223,26 @@ textarea{
   resize: none;
 }
 
+.resume-strip{
+  padding: 8px;
+  background-color: #353535;
+  color: white;
+  font-size: 40px;
+}
+
+.resume-strip:hover{
+  background-color: rgb(47, 128, 133);
+}
+.fa-file-text{
+  color: white;
+  margin: 15px;
+}
+
+.resume-link{
+  font-size: 20px;
+  color: white;
+}
+
 a {
   -webkit-transition: all 0.35s;
   -moz-transition: all 0.35s;
