--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -4,9 +4,6 @@ body {
   width: 100%;
 }
 
-@@media query {
-
-}
 body {
   font-family: 'Merriweather', 'Helvetica Neue', Arial, sans-serif;
 }
@@ -217,6 +214,7 @@ hr.division{
   html,
   body {
     overflow-x: hidden;
+    overflow-y: scroll;
   }
 
   .parallax {
