Actually fix it

--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -211,12 +211,9 @@ hr.division{
 }
 
 @media only screen and (max-device-width: 1024px) {
-  html,
-  body {
-    overflow-x: hidden;
-    overflow-y: scroll;
+  #skills #contact # about {
+    overflow: hidden;
   }
-
   .parallax {
       background-attachment: scroll;
   }
