fix message form

--- a/static/css/mypage.css
+++ b/static/css/mypage.css
@@ -163,6 +163,12 @@ hr.division{
   cursor:default;
 }
 
+textarea.form-message {
+  resize: none;
+  height: 20vh;
+}
+
+
 .social-list {
   padding-left: 15px;
 }
